Fixed overflowing of cart on small screen

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -161,6 +161,7 @@
     display: flex;
     flex-direction: column;
     align-items: stretch;
+    // align-items: center;
     padding: 7rem 4rem;
     position: fixed;
     z-index: $z-1000;
@@ -185,6 +186,7 @@
     }
 
     &__wrapper {
+      width: 100%;
       max-width: 1000px;
       margin: 0 auto;
     }
@@ -267,18 +269,13 @@
       gap: 2rem;
       grid-template-columns: repeat(12, 1fr);
       grid-template-rows: repeat(4, 1fr);
-      // grid-template-areas:
-      //   'img text text text  price'
-      //   'img text text text  .'
-      //   'img count count  . .'
-      //   'img remove . . .';
 
       &__img {
-        // grid-area: img;
         cursor: pointer;
         grid-row: 1 / 5;
         grid-column: 1 / 5;
         display: block;
+        width: 100%;
         max-width: 100px;
 
         @include respond(md) {
@@ -296,7 +293,6 @@
       }
 
       &__text {
-        // grid-area: text;
         grid-row: 1 / 3;
         grid-column: 5 / 11;
         line-height: 1.5;
@@ -324,7 +320,6 @@
       }
 
       &__price {
-        // grid-area: price;
         grid-row: 1 / 2;
         grid-column: 11 / 13;
         justify-self: end;
@@ -340,8 +335,6 @@
       }
 
       &__qty {
-        // grid-area: count;
-        // width: 50%;
         grid-row: 3 / 4;
         grid-column: 5 / 11;
         display: flex;
@@ -370,6 +363,7 @@
           text-align: center;
           background-color: transparent;
           border: none;
+          width: 100%;
 
           &:focus {
             outline: none;
@@ -394,7 +388,6 @@
       }
 
       &__remove {
-        // grid-area: remove;
         grid-row: 4 / 5;
         grid-column: 5 / 7;
         font-size: 1.25rem;
@@ -424,13 +417,13 @@
       padding: 4rem 0;
       display: flex;
       flex-direction: column;
-      // flex-wrap: wrap;
+      flex-wrap: wrap;
       justify-content: space-between;
       gap: 6rem;
 
-      & > * {
-        max-width: 400px;
-      }
+      // & > * {
+      //   max-width: 400px;
+      // }
 
       @include respond(md/lg) {
         flex-direction: row;
@@ -442,6 +435,7 @@
       display: flex;
       flex-direction: column;
       gap: 1rem;
+      width: 100%;
 
       @include respond(md/lg) {
         flex: 0.5;
